[project]
name = "claude-token-queue-mcp"
version = "0.7.0"
description = "MCP server for claude-token-queue — 토큰 한도로 막힌 Claude Code 작업을 큐에 넣고 리셋 시각에 자동 재실행"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "naryeo628" }]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
ctq-mcp = "claude_token_queue.server:main"
ctq-runner = "claude_token_queue.runner:main"
ctq-watch = "claude_token_queue.watcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_token_queue"]
